[package]
name = "appw-backfill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
aws-config = "0.51.0"
aws-sdk-sqs = "0.21.0"
reqwest = "0.11.13"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
